# word_count

./: .gitignore  CMakeLists.txt  conf_read.cpp  conf_read.h  data.txt  main.cpp  res_a.txt  res_num.txt  script.py  unzip.cpp  unzip.h
